1. sidebar on desktop, shift spotify there + patreon link 2. finish the article + proofread 3. necessary css changes + fixes + comments

--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,7 @@
-.post-container {
+.post__container {
   counter-reset: footnotes;
   position: relative;
+  margin: auto;
 }
 
 .post__container blockquote {
